--- a/style.css
+++ b/style.css
@@ -72,4 +72,25 @@ header h1{
     background-color: rgba(0, 0, 0, 0.829);
 }
 
+/*interaction ============*/
+
+/*ol(ordened list)=========*/
+ol{
+    box-sizing: border-box;
+    padding: 10px;
+    width: min(530px,62%);
+    margin: 1em auto;
+    text-align: left;
+    background: linear-gradient(45deg,#8500de2d,#8400DE,);
+    border-radius:  5px;
+}
+li{
+    text-align: center;
+   font-size: 1.8em; 
+   color: #fff;
+   letter-spacing: 3px;
+
+}
+
+
 
